<resources>
    <string name="app_name">JEJAKKAKI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">INFORMATION</string>
    <string name="tumbuhan">PLANTS</string>
    <string name="keanekaragaman_hayati">BIODIVERSITY</string>
    <string name="hewan">ANIMAL \n&amp; \nPLANTS</string>
    <string name="aktifitas">ACTIVITY</string>
    <string name="rute">ROUTE</string>
    <string name="taman_nasional">NATIONAL PARK</string>
    <string name="lowcase_taman_nasional">National Park</string>
    <string name="taman_info1">
        Stepping out of our usual track, Tangkahan ecotourism in Batang Serangan Langkat, North Sumatra, beckons. A hidden paradise, part of Gunung Leuser National Park, it boasts a forest patrol team led by elephants and their trainers, the Srati. Visitors can join their noble endeavor, a journey that spans days deep into the forest, from Tangkahan to Bukit Lawang.
    </string>
    <string name="taman_info2">
        Named after the Batang Gadis River, this national park harbors crucial wildlife displaced by habitat destruction from land clearing and fires. Stretching along the Bukit Barisan mountain range, it ranges from 300 to 2,145 meters above sea level, with Mount Sorik Marapi as its highest peak. It serves as a vital sanctuary for the region\'s diverse flora and fauna.
    </string>
    <string name="taman_info3">
        In 2004, the area became a national park, spanning 38,000 hectares. By 2009, it expanded to 83,000 hectares, a move reflecting its emerald-like richness in tropical biodiversity. Nestled in Sumatra\'s rainforest, this park embodies ecological significance, making the expansion a fitting decision, preserving its vibrant ecosystems for generations to come.
    </string>
    <string name="taman_info4">
        Siberut National Park, one of Indonesia\'s ten Biosphere Reserves, lies in Mentawai Island, West Sumatera, 155 km from Padang, the province\'s capital. Sixty percent of its area is primary forest, including Dipterocarpacear and mixed primary forests, swamps, coastal, and mangrove forests. This park has a natural forest with a canopy rising as high as 60 meters.
    </string>
    <string name="taman_info5">
        Nestled within the mist of Kerinci Seblat National Park, the enigmatic Kerinci summit remains veiled by ethereal fog, its allure captivating countless adventurers. Enshrouded in mystery, this active mountain\'s summit, adorned with sub-alpine flora, beckons seekers of nature\'s secrets to unravel its majestic heights and delve into the beauty of its terrain.
    </string>
    <string name="taman_info6">
        Nestled within the asylum area of 60,500 hectares across Sarolangun, Bungo Tebo, and Batang districts, Bukit Duabelas, aptly named for its 12 main hills, now extends its allure beyond mere landscape. Its enchanting vistas unveil a tapestry of unique natural scenery, offering a sanctuary where nature\'s splendor unfolds in harmonious symphony with the land.
    </string>
    <string name="taman_info7">
        Bukit Tigapuluh National Park lies amidst Sumatera\'s lowland, distinct from the Bukit Barisan ridge to its west. Exploring it reveals tropical humidity, inducing sweat. The park boasts four ecosystems: pristine forest, logged-over areas, bushes, rubber plantations, and fields. It\'s a landscape teeming with life, nestled in the heart of Sumatera\'s terrain.
    </string>
    <string name="taman_info89">
        Berbak National Park, the largest wetland conservation area in Southeast Asia, stores the largest carbon in the world. On the other hand, Sembilang National Park on Sumatra Island  is a haven for thousands of East Asian and Australian migratory birds, including peat swamp forests and riparian forests. Both parks are essential for environmental conservation.
    </string>
    <string name="taman_info10">
        Located at the southern line of Bukit Barisan mountains, Bukit Barisan Selatan National  Park is a home for large mammals such as Sumatran tigers (Panthera tigris sumatrensis), Sumatran elephants (Elephas maximus sumatranus) and Sumatran rhinos (Dicerorhinus  sumatrensis). This place not only shelters these iconic species but also fosters rich biodiversity.
    </string>
    <string name="taman_info11">
        Way Kambas National Park was drawn attention from the world after the birth of Andatu in 2012. This baby Sumatran Rhinoceros (Dicerorhinus sumatraensis) has given a triumph for the park. A hard effort has delivered to support a semi-in-situ captive of Way Kambas\' Sumatran Rhino Sanctuary. Literally, Andatu stands for \'Anugerah dari Tuhan\' meaning Gift from God.
    </string>
    <string name="taman_info12">
        Gunung Palung National Park is the only Dipterocarpaceae tropical rain forest which is   considered to be the best and widest forest in Kalimantan island. This forest cover is a chain of hills and significantly important as a water resource for the locals. The park\'s topography varies from lowland to highland, with two mountain summits in the middle.
    </string>
    <string name="taman_info13">
        Bentarum National Park in West Kalimantan is the largest conservation area in the region. Known for its contrasting rainy and dry seasons, it includes Lake Sentarum and Betung Kerihun. The park offers diverse ecosystems: lowland, swamp, old secondary, and Dipterocarpus forests. It houses 75% of Kalimantan\'s endemic plants, making it vital for the biodiversity.
    </string>
    <string name="taman_info14">
        Bukit Baka - Bukit Raya National Park may sound a little unique. This park is a combination of two national nature reserves of thetwo provinces, namely Bukit Baka Nature Reserve in West Kalimantan, and Bukit Raya Nature Reserve in Central Kalimantan. The  biodiversity of Bukit Baka - Bukit Raya is also abundant: 817 plant species out of  139 families.
    </string>
    <string name="taman_info16">
        Borneo Orangutan (Pongo pygmaeus) Rehabilitation Center in Camp Leaky has been the main tourist attraction in Tanjung Puting National Park,Pangkalan Bun, Kotawaringin Barat, Central Kalimantan. The research center was builtin the 1970s. The highlight is the feeding time of the Asian great ape, the Orangutan, where tourists can observe these creatures up close.
    </string>
    <string name="taman_info17">
        Sebangau National Park is a representative of swamp peat forest ecosystem di Central Kalimantan that supports three watercatchment area; Sebangau, Kahayan, and Katingan. The park maintains and cares of these catchment areas and supports the life of human and  wildlife. The local tribe rely their transportation mobility on the rivers flowing in the park.
    </string>
    <string name="taman_info18">
        Just like Betung Kerihun National Park, Kayan Mentarang National Park is also located  adjacent to the neighbouring country, Malaysia at two points ;Sarawak on the west and   Sabah the north. Located at the border of Indonesia and Malaysia serves this park as a   fort to the nation in term of sovereignty as well as the sustainability of its natural   resources.
    </string>
    <string name="taman_info19">
        Bunaken, a diver\'s paradise globally acclaimed, is a cherished marine destination in Indonesia. Situated within Bunaken National Park, North Sulawesi. Alongside Manado Tua, Mantehage, Siladen, and Nain, it forms the park\'s picturesque landscape. Accessible within a swift 45-minute boat ride from Manado, it entices enthusiasts with its underwater wonders.
    </string>
    <string name="taman_info20">
        A very distinctive karst landscape stands as natural sculptures in the Bantimurung   Bulusaraung National Park, Maros, South Sulawesi. No wonder it is often called as a   karst tower. Because, It is standing tall with sharp fractures. Karst formation in Maros  is recognized as the second largest karst landscape while the first is in southern China.
    </string>
    <string name="taman_info21">
        Dozens taka, Bungin, and the islands forms the landscape of Taka Bonerate. String of    small islands, and the lagoon from the sand sediment, broken coral and shells form the younger soils. The word of Taka Bonerate itself means reef on the sand. The region  once known as tiger atolls (tiger land) comprising of store barrier reef, fringing reef and ring reef.
    </string>
    <string name="taman_info22">
        Rawa Aopa Watumohai National Park sprawls from South East Sulawesi\'s tip, safeguarding Wallacea\'s wetland ecosystem. Spanning 105.194 hectares, it acts as a colossal water catchment for the island, crucial for sustaining life. Recognized as a World Ramsar Site, this park bears significant responsibility in preserving biodiversity and ecological balance.
    </string>
    <string name="taman_info23">
        In the vibrant heart of the Coral Triangle lies Wakatobi, a miniature archipelago. Bathed in sunlight, Wakatobi National Park, nestled in Southeast Sulawesi, inviting travelers to its piers. Its name, Wakatobi, derived from its islands: Wangi-Wangi, Kaledupa, Tomia, and Binongko, offers an invitation to explore the wonders of this marine sanctuary.
    </string>
    <string name="taman_info24">
        Lore Lindu National Park in Indonesia is a captivating blend of biodiversity and cultural heritage. Nestled in Wallacea, it showcases endemic species alongside ancient Megalithicum sites, making it unique. With a sprawling 217 hectares, the park\'s landscapes vary from 300 to 2,610 meters above sea level, boasting the majestic Mount Tokosa. It\'s a wonders.
    </string>
    <string name="taman_info25">
        Kepulauan Togean, nestled in Central Sulawesi, is a marine national park, its small islands harboring rich biodiversity, including endemic species. Sheltered within the Gulf of Tomini, it\'s a small islands surrounded by reef coral. This park is included in the World Coral Triangle or the Coral Triangle, so this national park is very important to be proteced.
    </string>
    <string name="taman_info26">
        In North Sulawesi, beyond Bunaken National Park lies another gem: Bogani Nani Warta Bone National Park, nestled just three hours from Manado precisely in Kotamobagu. This sanctuary safeguards endangered species like the Maleo birds (Macrocephalon maleo) and lowland Anoa, showcasing the region\'s rich biodiversity and commitment to conservation efforts.
    </string>
    <string name="taman_info27">
        Bunaken is known worldwide as a paradise for diving lovers. The island has also been one of the favourite marine tourist destinations in the country. Bunaken island is a part of Bunaken National Park, located in Manado, North Sulawesi. Manado Tua, Mantehage, Siladen, and Nain are other main islands landscaping the park. Bunaken is easily accessed fromManado.
    </string>
    <string name="taman_info28">
        This National park, lying on the western edge of Java, is very challenging to see the Javan rhino at first hand (Rhinoceros sondaicus). Although they only have limited spread areas in Cikeusik and Citadahan, it is always a thrilling challenge to watch one-horned animals from Ranggon, atop a 5 – 7 meters height bamboo stage, amidst the lush wilderness.
    </string>
    <string name="ubah_bahasa">Change language</string>
    <string name="indonesia">Indonesia</string>
    <string name="inggris">English</string>
    <string name="pulau_sulawesi">Sulawesi \nIsland</string>
    <string name="pulau_papua">Papua \nIsland</string>
    <string name="klhk">KLHK</string>
    <string name="kembali">Back</string>
    <string name="jendela_kekayaan">Exploring \nIndonesia\'s Wealth</string>
</resources>