<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ui.maps.MapPapuaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/not_black">

        <include
            android:id="@+id/head_banner"
            layout="@layout/item_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="98dp"
            android:adjustViewBounds="true"
            android:background="@drawable/map_rectangle"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/customRoundedImageView" />

        <ImageView
            android:id="@+id/ivPulau"
            android:layout_width="1030dp"
            android:layout_height="881dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_papua"
            android:transitionName="pulauPapua"
            app:layout_constraintBottom_toTopOf="@id/tvLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack" />

        <ImageButton
            android:id="@+id/placeButton1"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="334dp"
            android:layout_marginTop="155dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="49"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton2"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="696dp"
            android:layout_marginTop="371dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="50"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton3"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="976dp"
            android:layout_marginTop="762dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="51"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="72dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:fontFamily="@font/syne_bold"
            android:text="@string/kembali"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:icon="@drawable/bx_left_arrow"
            app:iconSize="64dp"
            app:layout_constraintStart_toStartOf="@id/head_banner"
            app:layout_constraintTop_toBottomOf="@id/head_banner"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp" />

        <TextView
            android:id="@+id/tvPulau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_bold"
            android:text="@string/pulau_papua"
            android:textAlignment="center"
            android:textColor="@color/not_white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="@id/head_banner"
            app:layout_constraintTop_toTopOf="@id/btnBack" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:fontFamily="@font/neutro_extrabold"
            android:text="@string/jendela_kekayaan"
            android:textColor="@color/not_white"
            android:textSize="46sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/head_banner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/backgroundOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:visibility="gone" />

</RelativeLayout>