<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:keepScreenOn="true"
    android:layout_height="match_parent"
    tools:context=".ui.maps.MapSulawesiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/not_black">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/head_banner"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_marginHorizontal="98dp"
            android:adjustViewBounds="true"
            android:background="@drawable/map_rectangle"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/customRoundedImageView" />

        <ImageView
            android:layout_width="137dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:contentDescription="logo_java_jazz_festival"
            android:scaleType="centerInside"
            android:src="@drawable/logo_like"
            app:layout_constraintBottom_toBottomOf="@id/head_banner"
            app:layout_constraintEnd_toEndOf="@id/head_banner"
            app:layout_constraintStart_toStartOf="@id/head_banner"
            app:layout_constraintTop_toTopOf="@id/head_banner" />

        <ImageView
            android:id="@+id/left_icon"
            android:layout_width="280dp"
            android:layout_height="96dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/klhk"
            android:scaleType="centerInside"
            android:src="@drawable/logo_klhk"
            app:layout_constraintBottom_toBottomOf="@id/head_banner"
            app:layout_constraintStart_toStartOf="@id/head_banner"
            app:layout_constraintTop_toTopOf="@id/head_banner" />

        <ImageView
            android:id="@+id/right_icon"
            android:layout_width="302dp"
            android:layout_height="96dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="Back"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_folu"
            app:layout_constraintBottom_toBottomOf="@id/head_banner"
            app:layout_constraintEnd_toEndOf="@id/head_banner"
            app:layout_constraintTop_toTopOf="@id/head_banner" />

        <ImageView
            android:id="@+id/ivPulau"
            android:layout_width="776dp"
            android:layout_height="890dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sulawesi"
            android:transitionName="pulauSulawesi"
            app:layout_constraintBottom_toTopOf="@id/tvLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:fontFamily="@font/neutro_extrabold"
            android:text="@string/jendela_kekayaan"
            android:textColor="@color/not_white"
            android:textSize="46sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/head_banner" />

        <ImageButton
            android:id="@+id/placeButton1"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="668dp"
            android:layout_marginBottom="870dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="27"
            app:layout_constraintBottom_toBottomOf="@id/ivPulau"
            app:layout_constraintStart_toStartOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton2"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="544dp"
            android:layout_marginTop="93dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="26"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton3"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="329dp"
            android:layout_marginTop="211dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="25"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton4"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="124dp"
            android:layout_marginTop="334dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="24"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton5"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="491dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="53"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton6"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="752dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="20"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton7"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="327dp"
            android:layout_marginTop="686dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="22"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton8"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="234dp"
            android:layout_marginTop="49dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="21"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toBottomOf="@id/ivPulau" />

        <ImageButton
            android:id="@+id/placeButton9"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="571dp"
            android:layout_marginTop="824dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_place_48"
            android:tag="23"
            app:layout_constraintStart_toStartOf="@id/ivPulau"
            app:layout_constraintTop_toTopOf="@id/ivPulau" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="72dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:fontFamily="@font/syne_bold"
            android:text="@string/kembali"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:icon="@drawable/bx_left_arrow"
            app:iconSize="64dp"
            app:layout_constraintStart_toStartOf="@id/head_banner"
            app:layout_constraintTop_toBottomOf="@id/head_banner"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp" />

        <TextView
            android:id="@+id/tvPulau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_bold"
            android:text="@string/pulau_sulawesi"
            android:textAlignment="center"
            android:textColor="@color/not_white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="@id/head_banner"
            app:layout_constraintTop_toTopOf="@id/btnBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/backgroundOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:visibility="gone" />

</RelativeLayout>